[package]
name = "wasm_othello"
version = "0.1.0"
authors = ["t-yng <t.yng.greenmonkey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"